--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(135deg, #667eea, #8B0000);
+      background: dark red;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     .card {
-      background: white;
+      background: gray;
       padding: 40px 30px;
       border-radius: 16px;
       text-align: center;
