--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     .card {
-      background: gray;
+      background: dark red;
       padding: 40px 30px;
       border-radius: 16px;
       text-align: center;
