--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     .card {
-      background: dark red;
+      background: rgb(139,0,0);
       padding: 40px 30px;
       border-radius: 16px;
       text-align: center;
