--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: dark red;
+      background: gray;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
@@ -29,7 +29,7 @@
     h1 {
       margin: 0;
       font-size: 28px;
-      color: #333;
+      color: #000000;
     }
 
     p {
